--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(lmc_arr)
 export(lmc_calc_all)
 export(lmc_exp)
 export(lmc_lin)
+export(lmc_pwr)
 export(lmc_sel)
 export(lmlab_eq)
 export(lmlab_eqr2)
